# m300_depth_filter

./: .gitignore
M300_trajectory_drawer/: CMakeLists.txt  CommonTypes.hpp  MathLib.hpp  Trajectory.ipynb  local_pose_offset.cpp  local_pose_summary.cpp
M300_trajectory_drawer/.ipynb_checkpoints/: Trajectory-checkpoint.ipynb
M300_trajectory_drawer/17.1/: gps.csv  local_pose.csv
M300_trajectory_drawer/22.7/: gps.csv  local_pose.csv  new_local_pose.csv
M300_trajectory_drawer/31.6/: gps.csv  local_pose.csv  new_local_pose.csv
M300_trajectory_drawer/41.2/: gps.csv  local_pose.csv  new_local_pose.csv
M300_trajectory_drawer/51.2/: gps.csv  local_pose.csv  new_local_pose.csv
m300_depth_filter/: CMakeLists.txt  abs_rel_pose.csv
m300_depth_filter/include/m300_depth_filter/: AbsolutePoseRecover.hpp  Dataset.hpp  FileWritter.hpp  SegmentLocationFinder.hpp  SystemLib.hpp
m300_depth_filter/notebook/: Trajectory.ipynb  draw_depth_estimation_res.ipynb  draw_depth_estimation_res_171.ipynb  draw_depth_estimation_res_227.ipynb  draw_depth_estimation_res_316.ipynb  draw_depth_estimation_res_412.ipynb  draw_depth_estimation_res_512.ipynb
m300_depth_filter/notebook/.ipynb_checkpoints/: Trajectory-checkpoint.ipynb  draw_depth_estimation_res-checkpoint.ipynb  draw_depth_estimation_res_171-checkpoint.ipynb  (+5 more)
m300_depth_filter/src/: AbsolutePoseRecover.cpp  CMakeLists.txt  Dataset.cpp  DepthFilter.cpp  Frame.cpp  SegmentLocationFinder.cpp  Triangulation.cpp  Triangulator.cpp  align_ir_rgb.cpp  test_AbsolutePoseRecover.cpp  test_DepthFilter.cpp  test_SegmentLocationFinder.cpp
m300_pose_correction/: CMakeLists.txt
m300_pose_correction/src/: CMakeLists.txt
(+16 files in other folders)
